--- a/Client/Dockerfile
+++ b/Client/Dockerfile
@@ -15,11 +15,9 @@ COPY . .
 RUN npm run build
 
 # Use a lightweight web server to serve the app
-FROM nginx:1.25
-COPY --from=build /app/build /usr/share/nginx/html
 
 # Expose the port the app runs on
 EXPOSE 80
 
 # Start the web server
-CMD ["nginx", "-g", "daemon off;"]
+CMD ["npm run dev"]
